google検索に引っかからないように

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="ミント同期での2020年お盆旅行のしおり。漢気の金額が不安じゃ。"
     />
+    <meta name="robots" content="noindex" />
   </head>
   <body>
     <div id="root"></div>
